[project]
name = "test-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Nguyen, Rick (R.)",email = "rnguyen8+ford@ford.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab (>=4.4.3,<5.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
